Simple example using wtf forms with bootstrap integration and session variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\scottt\\Anaconda3\\envs\\flask-dev\\python.exe"
+    "python.pythonPath": "C:\\Users\\tscdev\\Anaconda3\\envs\\flask\\python.exe"
+    
 }
